--- a/fe_StudyWithCJ/index.html
+++ b/fe_StudyWithCJ/index.html
@@ -8,7 +8,7 @@
   <title>Study With CJ</title>
 </head>
 
-<body>
+<body style="background-color: #fff7e8;">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
